chore updated _Layout.cshtml to include new js files

--- a/FileEncryptionWebapp/Views/Shared/_Layout.cshtml
+++ b/FileEncryptionWebapp/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
 <body>
     @RenderBody()
     <script src="~/js/chacha.js"></script>
+    <script src="~/js/chacha_visualizer.js"></script>
     <script src="~/js/commands.js"></script>
+    <script src="~/js/states_commanders.js"></script>
     <script src="~/js/site.js"></script>
     <script src="~/js/caret.js"></script>
 </body>
